--- a/css/styles.css
+++ b/css/styles.css
@@ -347,6 +347,14 @@ a:visited {
  background-image: url("https://learn-verified.s3.amazonaws.com/diane-vu.jpg");
 }
 
+#amir-patel-cover {
+ background-image: url("https://i.imgur.com/LkngYru.jpg");
+}
+
+#amir-patel-card {
+ background-image: url("https://i.imgur.com/DLhovkW.jpg");
+}
+
 /* TODO: Add your partner's image styles
 
 #firstname-lastname-cover {
